--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
     <head>
-        <title> this is main branch</title>
+        <title>This is Main branch</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+       <ul>
+            <li>Home</li>
+            <li>Services</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
     </body>
 </html>
