--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-       <ul>
-            <li>Home</li>
-            <li>Services</li>
-            <li>About</li>
-            <li>Contact</li>
+        <ul class="parent">
+            <li> 
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Service</a>
+                <ul>
+                    <li>
+                        <a>Service1</a>
+                    </li>
+                    <li>
+                        <a>Service2</a>
+                    </li>
+                    <li>
+                        <a>Service3</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">About</a>
+                <ul>
+                    <li>
+                        <a>About1</a>
+                    </li>
+                    <li>
+                        <a>About2</a>
+                    </li>
+                    <li>
+                        <a>About3</a>
+                    </li>
+                </ul>
+            </li>
+
         </ul>
+    
     </body>
 </html>
