--- a/index.html
+++ b/index.html
@@ -4,11 +4,58 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-       <ul>
-            <li>Home</li>
-            <li>Services</li>
-            <li>About</li>
-            <li>Contact</li>
+       <ul class="parent">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">Service</a>
+        </li>
+        <li>
+            <a href="#">About</a>
+        </li>
         </ul>
+        <div class="header"></div>
+        <div class="content">
+            <ul class="products">
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+                <li>
+                    <button>Add to cart</button>
+                    <img src="images/watch.jpg" alt="">
+                </li>
+            </ul>
+        </div>
+        
     </body>
 </html>
